hphp/test/slow/readonly_tdb/scope_if_5.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'ROTDB\ScopeIf5\ro() returns readonly, but the caller expects a mutable value' in %s.php:20
Stack trace:
#0 {main}
